--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
-    "enzyme": "^3.11.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -42,7 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1"
-  }
+  "devDependencies": {}
 }
