--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
           cmd: install # will run `yarn install` command
       - uses: borales/actions-yarn@v2.0.0
         with:
-          cmd: CI=false build # will run `yarn build` command
+          cmd: CI=false && build # will run `yarn build` command
       - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: test # will run `yarn test` command
