--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,13 +5,19 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+    with:
+      node-version: '14'
+      check-latest: true
+    - run: CI=false
       - uses: actions/checkout@v2
       - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: install # will run `yarn install` command
       - uses: borales/actions-yarn@v2.0.0
         with:
-          cmd: CI=false && build # will run `yarn build` command
+          cmd: build # will run `yarn build` command
       - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: test # will run `yarn test` command
