--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI
 on: [push]
 jobs:
   test_commit:
-    runs-on: ubunti-latest
+    runs-on: ubunt-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
