still trying stuff

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,5 @@ jobs:
           node-version: 12
       - run: npm install
       - run: npm test
-      - run: ci=false npm run build
+      - run: ci=false
+      - run: npm run build
