setting CI env var to empty string to turn of set warnings as errors

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
           node-version: 12
       - run: npm install
       - run: npm test
-      - run: ci=false && npm run build
+      - run: ci="" npm run build
