--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
           node-version: 12
       - run: npm install
       - run: npm test
-      - run: ci="" npm run build
+      - run: CI="" npm run build
